# amazon-bedrock-agentcore-samples

01-features/01-harness/: README.md
01-features/01-harness/01-advanced-examples/06-async-step-function/: .gitignore  README.md  cleanup.sh  cloudformation.yaml  deploy.sh  example_inputs.json  test_workflow.sh
01-features/04-manage-context-of-your-agent/memory/: README.md
01-features/04-manage-context-of-your-agent/memory/06-production-patterns/: 01-error-handling.md  02-cost-optimization.md  03-production-checklist.md  README.md  production-patterns.py
99-my-handson/: agentcore_config.json  cognito_config.json
99-my-handson/01-ntt-data/: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  cdk.json  outfile.json  pyproject.toml
99-my-handson/01-ntt-data/docs/: deploy.md  index.md
99-my-handson/01-ntt-data/infra/: app.py
99-my-handson/01-ntt-data/infra/stacks/: cognito_stack.py  mock_api_stack.py  storage_stack.py
99-my-handson/01-ntt-data/scripts/: invoke.py
99-my-handson/01-ntt-data/src/ntt_data_agent/agent/: main.py
99-my-handson/01-ntt-data/src/ntt_data_agent/interceptor/: handler.py
99-my-handson/01-ntt-data/src/ntt_data_agent/mock_api/: bi_handler.py  crm_handler.py
99-my-handson/01-ntt-data/src/ntt_data_agent/setup/: agentcore.py  cognito.py
99-my-handson/01-ntt-data/src/ntt_data_agent/tools/: bi.py  crm.py
99-my-handson/01-ntt-data/tests/: test_agent_tools.py  test_interceptor.py  test_mock_bi_api.py  test_mock_crm_api.py  test_setup_cognito.py
(+58 files in other folders)
